sending events in batch to VMSs