@@ -56,8 +56,8 @@
           <source>18</source>
           <target>18</target>
           <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.foreign</arg>
+<!--            <arg>&#45;&#45;add-modules</arg>-->
+<!--            <arg>jdk.incubator.foreign</arg>-->
           </compilerArgs>
         </configuration>
       </plugin>
